Fixed modal title overlap content on large screens

--- a/app/main.css
+++ b/app/main.css
@@ -51,7 +51,6 @@ body {
 }
 
 #modal-title {
-    font-size: 4vw;
     color: rgb(105, 179, 115);
     font-family: "Comic Sans MS", sans-serif;
 }
